# wsjtxcli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: quality.yaml  release.yaml
wsjtxcli/: main.py
