[tool.poetry]
name = "wsjtxcli"
version = "0.0.0"
description = "Launch isolated WSJT-X instances configured with argument input"
authors = ["Ivica"]
packages = [{ include = "wsjtxcli" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
pytest = "9.0.3"
isort = "8.0.1"
setuptools = "82.0.1"
pre-commit = "4.6.0"
mypy = "^2.1.0"
pylint = "^4.0.5"

[tool.poetry.scripts]
wsjtxcli = "wsjtxcli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | build
  | venv
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
files = ["wsjtxcli", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
